@@ -7,7 +7,8 @@ Maintenance
 * Underscores are now allowed in peers/modalities symbolic names
 * Fix compatibility with C-MOVE SCU requests issued by Ambra
 * Fix transcoding in C-MOVE SCP, in the case where "SynchronousCMove" is "true"
-
+* When checking DICOM allowed methods, if there are multiple modalities with the same AET, 
+  differentiate them from the calling IP
 
 Version 1.7.3 (2020-08-24)
 ==========================
